ngIf bevorstehende Events

--- a/src/app/accountverwaltung/accountverwaltung.component.html
+++ b/src/app/accountverwaltung/accountverwaltung.component.html
@@ -13,8 +13,7 @@
   </div>
 
   <div class="teil_2">
-    <!-- user.email muss zu user.firstname user.lastname später geändert werden -->
-    <h2>Willkomen zurück {{user.email}}!</h2>
+    <h2>Willkomen zurück {{user.firstname}} {{user.lastname}}!</h2>
   </div>
 
   <div class="liste_der_optionen">
