--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -76,6 +76,14 @@
     </table>
     <p> <b>*Familienpass:</b> Familienkarten werden an Familien abgegeben, die sich aus mindestens einer Erwachsenen Person und einer unbeschränkten Anzahl Kinder bis zum 19. Altersjahr (Kinder und Jugendliche; gem. Familiennachweis) zusammensetzen. Patchwork-Familie: gilt auch, wenn die gleiche Wohnadresse bestätigt wird.
     </p>
+    <h2>Bankverbindung</h2>
+    <p>Beim Kauf eines Skipass bitte überweisen Sie den jeweiligen Betrag auf folgendes Konto:</p>
+    <b>Empfänger:</b> Ticketero GmbH
+    <p></p>
+    <b>IBAN:</b> DE02600501010002034304
+    <p></p>
+    <b>Bank:</b> LANDESBANK BADEN-WÜRTTEMBERG
+
   </div>
   <div class="teil3"></div>
 </section>
