--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -92,6 +92,10 @@ padding-top: 5%;
 }
 .tarife{
   display:flex;
+  padding-bottom: 1%;
+}
+.tarife h2{
+padding-top: 3%;
 }
 .teil2{
   width: 50%;
