--- a/src/app/anmeldemaske/anmeldemaske.component.html
+++ b/src/app/anmeldemaske/anmeldemaske.component.html
@@ -11,11 +11,12 @@
       <mat-form-field appearance="fill">
         <mat-label>E-Mail Adresse</mat-label>
         <input matInput placeholder="email@example.com"  type="email" formControlName="email" required>
-       <!--<mat-error *ngIf="email1.invalid">{{getErrorMessage()}}</mat-error>   [formControl]="email1"-->
+       <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field><br>
       <mat-form-field appearance="fill">
         <mat-label>Passwort eingeben</mat-label>
         <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
+        <mat-error *ngIf="password.invalid">{{getErrorMessage()}}</mat-error>
         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Passwort verbergen'" [attr.aria-pressed]="hide">
           <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
