--- a/src/app/agb/agb.component.html
+++ b/src/app/agb/agb.component.html
@@ -1,12 +1,11 @@
-<html>
+<html >
 <head>
-  <title>Registrieren</title>
 </head>
-<body>
+<body lang="de">
 <section class="registrieren">
   <div class="teil1"> </div>
   <div class="teil2">
-    <h1>Allgemeine Geschäftsbedingungen der Firma Ticketero</h1>
+    <h1>Allgemeine Geschäftsbedingungen von Tricketero GmbH</h1>
 
     <h2>§1 Geltung gegenüber Unternehmern und Begriffsdefinitionen</h2>
     <p>(1) Die nachfolgenden Allgemeinen Geschäftsbedingungen gelten für alle Lieferungen zwischen uns und einem Verbraucher in ihrer zum Zeitpunkt der Bestellung gültigen Fassung. Verbraucher ist jede natürliche Person, die ein Rechtsgeschäft zu Zwecken abschließt, die überwiegend weder ihrer gewerblichen noch ihrer selbständigen beruflichen Tätigkeit zugerechnet werden können (§ 13 BGB).</p>
@@ -61,7 +60,6 @@
     <h2>§5 Eigentumsvorbehalt</h2>
     <p>Wir behalten uns das Eigentum an der Ware bis zur vollständigen Bezahlung des Kaufpreises vor.</p>
 
-    <p>****************************************************************************************************</p>
 
 
     <h2>§6 Widerrufsrecht des Kunden als Verbraucher:</h2>
@@ -103,7 +101,6 @@
 
     <p>Ende der Widerrufsbelehrung</p>
 
-    <p> **************************************************************************************************** </p>
 
 
     <h2>§7 Widerrufsformular</h2>
@@ -118,7 +115,7 @@
 
     <p>Hiermit widerrufe(n) ich/wir (*) den von mir/uns (*) abgeschlossenen Vertrag über den Kauf der folgenden Waren (*)/die Erbringung der folgenden Dienstleistung (*)</p>
 
-    <p>_____________________________________________________</p>
+    <p>_______________________________________________</p>
 
     <p>Bestellt am (*)/erhalten am (*)</p>
 
@@ -126,12 +123,12 @@
 
     <p>Name des/der Verbraucher(s)</p>
 
-    <p>_____________________________________________________</p>
+    <p>_______________________________________________</p>
 
     <p>Anschrift des/der Verbraucher(s)</p>
 
 
-    <p>_____________________________________________________</p>
+    <p>_______________________________________________</p>
 
     <p>Unterschrift des/der Verbraucher(s) (nur bei Mitteilung auf Papier)</p>
 
@@ -178,8 +175,6 @@
         <h2>§10 Vertragssprache</h2>
     <p>Als Vertragssprache steht ausschließlich Deutsch zur Verfügung.</p>
 
-    <p>****************************************************************************************************</p>
-
 
           <h2>§11 Kundendienst</h2>
     <p>Unser Kundendienst für Fragen, Reklamationen und Beanstandungen steht Ihnen werktags von 9:00 Uhr bis 17:30 Uhr unter</p>
@@ -192,7 +187,6 @@
 
     <p>zur Verfügung.</p>
 
-    <p>****************************************************************************************************</p>
 
 
 
@@ -201,10 +195,7 @@
 
   <div class="teil3"> </div>
 </section>
-<section class="hinweis">
-  <div class="teil1"></div>
-  <div class="teil3"></div>
-</section>
+
 </body>
 </html>
 
