--- a/src/app/skipasskaufen/skipasskaufen.component.html
+++ b/src/app/skipasskaufen/skipasskaufen.component.html
@@ -4,7 +4,7 @@
 <div class="teil1"> </div>
 <div class="teil2">
   <h1>Kaufe deinen Skipass</h1>
-  <form #ticketBuy="ngForm" (ngSubmit)="onSubmit(ticketBuy.value)" action="https://formsubmit.co/el/zipice" method="POST" >
+  <!--<form #ticketBuy="ngForm" (ngSubmit)="onSubmit(ticketBuy.value)" action="https://formsubmit.co/el/zipice" method="POST" >
 
     <mat-form-field appearance="fill" >
     <mat-label>Vorname:</mat-label>
@@ -54,6 +54,48 @@
     </mat-form-field>
       <p> </p>
     <button [disabled]="ticketBuy.invalid" type="submit" id="kaufen" mat-raised-button color="primary" [routerLink]="['/bestaetigung']">Kostenpflichtig kaufen</button>
+  </form>-->
+  <form (ngSubmit)="onSubmit()" [formGroup]="form">
+
+    <mat-form-field appearance="fill" >
+      <mat-label>Vorname:</mat-label>
+      <input matInput type="text" name="Vorname" placeholder="Vorname" required formControlName="firstName">
+         </mat-form-field>
+
+    <mat-form-field appearance="fill" id="runter">
+      <mat-label>Nachname:</mat-label>
+      <input matInput type="text" name="Nachname" placeholder="Nachname" required formControlName="lastName">
+         </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Wähle ein Tarif aus:</mat-label>
+      <mat-select name="Tarif" required formControlName="subtype" >
+        <mat-option *ngFor="let food of foods" [value]="food.value">
+          {{food.viewValue}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field color="primary" appearance="fill">
+      <mat-label>Geburtsdatum</mat-label>
+      <input matInput [matDatepicker]="picker2" name="Geburtsdatum"  id="bday" required formControlName="birthday">
+      <mat-datepicker-toggle matSuffix [for]="picker2">
+      </mat-datepicker-toggle>
+      <mat-datepicker #picker2></mat-datepicker>
+    </mat-form-field>
+    <br>
+
+    <mat-form-field appearance="fill" id="runter">
+      <mat-label>E-Mail-Adresse:</mat-label>
+      <input matInput type="text" name="Email" email placeholder="Deine E-Mail-Adresse" required formControlName="email">
+          </mat-form-field>
+
+    <mat-form-field appearance="fill" id="runter">
+      <mat-label>Handynummer</mat-label>
+      <input matInput type="tel" name="Handynummer" placeholder="Handynummer"l formControlName="phonenumber" >
+    </mat-form-field>
+    <p> </p>
+    <button mat-raised-button color="primary" type="submit">Kostenpflichtig kaufen</button>
   </form>
 </div>
 <div class="teil3"> </div>
