--- a/src/app/show-ticket/show-ticket.component.html
+++ b/src/app/show-ticket/show-ticket.component.html
@@ -6,17 +6,7 @@
 <section class="registrieren">
   <div class="teil1"> </div>
   <div class="teil2">
-    <h1>Ticket</h1>
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title-group>
-          <mat-card-subtitle>{{skipass.serial_no}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{skipass.ticket_id}}</mat-card-subtitle><br><br>
-          <mat-card-title><strong>Skipass - {{skipass.firstname}} {{skipass.lastname}}</strong></mat-card-title>
-          <mat-card-subtitle><strong>Zermatt Bergbahn: </strong>{{skipass.uses_left}}</mat-card-subtitle>
-          <mat-card-subtitle><strong>Ticket gesperrt?: </strong>{{skipass.ban_reason}}</mat-card-subtitle>
-        </mat-card-title-group>
-      </mat-card-header>
-    </mat-card>
+    <h1>Ticket wurde erfolgreich kontrolliert</h1>
   </div>
   <div class="teil3"> </div>
 </section>
