--- a/src/app/registrierungsmaske/registrierungsmaske.component.html
+++ b/src/app/registrierungsmaske/registrierungsmaske.component.html
@@ -42,13 +42,13 @@
   </mat-form-field>
   <br>
   <mat-form-field appearance="fill" id="runter">
-    <mat-label>Handynummer</mat-label>
-    <input matInput type="tel" formControlName="phonenumber" placeholder="Handynummer">
+    <mat-label>Telefonnummer</mat-label>
+    <input matInput type="tel" formControlName="phonenumber" placeholder="Telefonnummer">
     <mat-error *ngIf="phonenumber.invalid">{{getErrorMessagePhonenumber()}}</mat-error>
   </mat-form-field>
   <mat-checkbox color="primary" formControlName="agb">Ich habe die <a [routerLink]="['/agb']"> AGB</a> gelesen und akzeptiert</mat-checkbox>
   <br><br>
-    <button mat-raised-button color="primary" type="submit">Registrieren</button><br>
+    <button [disabled]="this.form.invalid" mat-raised-button color="primary" type="submit">Registrieren</button><br>
   </form>
   </div>
   <div class="teil3"> </div>
