--- a/src/app/show-ticket/show-ticket.component.html
+++ b/src/app/show-ticket/show-ticket.component.html
@@ -7,6 +7,7 @@
   <div class="teil1"> </div>
   <div class="teil2">
     <h1>Ticket wurde erfolgreich kontrolliert</h1>
+    <button mat-raised-button color="primary" [routerLink]="['/checkTicket/34ec8fab-1365-4647-adf5-36f974ada3c5']">Weitere Tickets kontrollieren</button>
   </div>
   <div class="teil3"> </div>
 </section>
